# dither-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clean.sh  cleanup-format
.github/workflows/: workflow.yml
cmake/: FindGecode.cmake
ext/: CMakeLists.txt
include/: base_constraint_handler.h  combinations.h  constraint_handler.h  dither.h  dither_types.h  ipog.h  simple_constraint_handler.h
src/: CMakeLists.txt  dither.cc  ipog.cc  simple_constraint_handler.cc
tests/: CMakeLists.txt  combinations_test.cc  dither_test.cc  gecode_constraint_handler_test.cc  simple_constraint_handler_test.cc
